# WeeklyCalendar

./: .gitignore  .gitmodules  README.md
.github/workflows/: CI.yml  release.yml
Assets/nil/WeeklyCalendar/Test/: WeeklyCalendarTests.cs  nil.WeeklyCalendar.Test.asmdef
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
compiler/: Cargo.toml  build.rs
compiler/src/: input.rs  main.rs  output.rs
wasm-render/: AssemblyInfo.cs  DataDictionary.cs  Exports.cs  Settings.cs  SourceGenerationContext.cs  WeeklyCalendar.Wasm.cs  packages.lock.json  runtimeconfig.template.json  wasm-render.csproj
web/: Cargo.toml  Trunk.toml  i18n.toml  index.html  index.scss
web/i18n/en/: web.ftl
web/i18n/ja/: web.ftl
web/src/: about.rs  calendar.rs  event.rs  event_detail.rs  main.rs  render.rs  time_slot.rs
