[package]
name = "wc-compiler"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.8.2"
clap = { version = "4.3.0", features = ["derive"] }
flate2 = "1.0.27"
imagesize = "0.12.0"
iso639_enum = "0.6.0"
miette = { version = "5.8.0", features = ["fancy"] }
parse-zoneinfo = "0.3.0"
percent-encoding = "2.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
smallvec = { version = "1.10.0", features = ["serde"] }
tar = { version = "0.4.40", default-features = false }
tempfile = "3.5.0"
thiserror = "1.0.40"
toml = { version = "0.8.8", features = ["parse"] }

[build-dependencies]
flate2 = "1.0.27"
tar = { version = "0.4.40", default-features = false }
