[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
gloo = { version = "0.10.0", features = ["events"] }
i18n-embed = { version = "0.14.0", features = ["fluent-system", "web-sys-requester"] }
i18n-embed-fl = "0.7.0"
icu = "1.3.0"
implicit-clone = { version = "0.3.6", features = ["serde"] }
js-sys = "0.3.64"
maplit = "1.0.2"
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Window"] }
yew = { version = "0.20.0", features = ["csr"] }
